test/compile-fail/resolution/pub/in-non-visible-super/expected.txt
error: this item is not visible in root `super`
 --> top.rhdl:3:22
  |
3 |         pub(in super::super) struct c {}
  |                       ^^^^^ not visible in this scope
